// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSchemeProvider renders styling for dark mode when specified 1`] = `
<style>
  :root {
  --g-colorSchemeName: darkMode;
  --color-data-visualization-10: #007A72;
  --color-data-visualization-11: #f76593;
  --color-data-visualization-12: #ffc58f;
  --color-data-visualization-primary: #75bfff;
  --color-data-visualization-success-graph: #6bec8c;
  --color-data-visualization-success-text: #39d377;
  --color-data-visualization-error-graph: #f47171;
  --color-data-visualization-error-text: #eb4242;
  --color-data-visualization-01: #005fcb;
  --color-data-visualization-02: #75e4d5;
  --color-data-visualization-03: #B190FF;
  --color-data-visualization-04: #FDA600;
  --color-data-visualization-05: #75bfff;
  --color-data-visualization-06: #de2c62;
  --color-data-visualization-07: #a4f9ac;
  --color-data-visualization-08: #812ae7;
  --color-data-visualization-09: #ff5b45;
  --color-text-default: #ffffff;
  --color-text-subtle: #a5a5a5;
  --color-text-success: #39d377;
  --color-text-disabled: #4a4a4a;
  --color-text-error: #f47171;
  --color-text-warning: #e18d00;
  --color-text-inverse: #111111;
  --color-text-shopping: #75bfff;
  --color-text-link: #45a3fe;
  --color-text-formfield-default: #efefef;
  --color-text-formfield-disabled: #ababab;
  --color-text-formfield-placeholder: #ababab;
  --color-icon-default: #ffffff;
  --color-icon-subtle: #a5a5a5;
  --color-icon-success: #39d377;
  --color-icon-disabled: #4a4a4a;
  --color-icon-error: #f47171;
  --color-icon-warning: #e18d00;
  --color-icon-info: #75bfff;
  --color-icon-recommendation: #b190ff;
  --color-icon-inverse: #111111;
  --color-icon-shopping: #75bfff;
  --color-icon-avatar-default: #efefef;
  --color-background-default: #111111;
  --color-background-info-base: #75bfff;
  --color-background-info-weak: #003c96;
  --color-background-info-strong: #abdbff;
  --color-background-error-base: #f47171;
  --color-background-error-weak: #660000;
  --color-background-warning-base: #fdc900;
  --color-background-warning-weak: #7c2d00;
  --color-background-success-base: #6bec8c;
  --color-background-success-weak: #00422c;
  --color-background-recommendation-base: #b190ff;
  --color-background-recommendation-weak: #550aa9;
  --color-background-neutral: #cdcdcd;
  --color-background-shopping: #75bfff;
  --color-background-secondary-base: #767676;
  --color-background-tertiary-base: #cdcdcd;
  --color-background-selected-base: #e9e9e9;
  --color-background-inverse-base: #f9f9f9;
  --color-background-education: #75bfff;
  --color-background-elevation-accent: #191919;
  --color-background-elevation-floating: #2b2b2b;
  --color-background-elevation-raised: #4a4a4a;
  --color-background-avatar-placeholder: #404040;
  --color-background-avatar-wash: rgba(250, 250, 250, 0.5);
  --color-background-badge-neutral: #cdcdcd;
  --color-background-badge-info-default: #75bfff;
  --color-background-badge-info-hover: #abdbff;
  --color-background-badge-error: #f47171;
  --color-background-badge-warning: #fdc900;
  --color-background-badge-success: #6bec8c;
  --color-background-badge-recommendation: #b190ff;
  --color-background-box-default: #111111;
  --color-background-box-info-base: #75bfff;
  --color-background-box-info-weak: #003c96;
  --color-background-box-error-base: #f47171;
  --color-background-box-error-weak: #660000;
  --color-background-box-warning-base: #fdc900;
  --color-background-box-warning-weak: #7c2d00;
  --color-background-box-success-base: #6bec8c;
  --color-background-box-success-weak: #00422c;
  --color-background-box-recommendation-base: #b190ff;
  --color-background-box-recommendation-weak: #550aa9;
  --color-background-box-shopping: #75bfff;
  --color-background-box-secondary: #767676;
  --color-background-box-tertiary: #cdcdcd;
  --color-background-box-selected: #e9e9e9;
  --color-background-box-inverse: #f9f9f9;
  --color-background-box-education: #75bfff;
  --color-background-box-elevation-accent: #191919;
  --color-background-box-elevation-floating: #2b2b2b;
  --color-background-box-elevation-raised: #4a4a4a;
  --color-background-box-lightwash: #535353;
  --color-background-box-darkwash: #666;
  --color-background-box-transparentdarkgray: rgba(255, 255, 255, 0.8);
  --color-background-button-primary-active: #b8001b;
  --color-background-button-secondary-default: #4a4a4a;
  --color-background-button-secondary-hover: #535353;
  --color-background-button-secondary-active: #666;
  --color-background-button-tertiary-hover: rgba(250, 250, 250, 0.5);
  --color-background-button-tertiary-active: rgba(250, 250, 250, 0.6);
  --color-background-button-shopping-default: #75bfff;
  --color-background-button-shopping-hover: #4a8ad4;
  --color-background-button-shopping-active: #4a85c9;
  --color-background-button-white-default: #030303;
  --color-background-button-white-hover: #121212;
  --color-background-button-white-active: #1f1f1f;
  --color-background-button-gray-default: #cdcdcd;
  --color-background-button-gray-hover: #919191;
  --color-background-button-gray-active: #9b9b9b;
  --color-background-button-semitransparentwhite-default: rgba(51, 51, 51, 0.8);
  --color-background-button-semitransparentwhite-hover: #121212;
  --color-background-button-semitransparentwhite-active: #1f1f1f;
  --color-background-button-semitransparentdark-default: rgba(255, 255, 255, 0.8);
  --color-background-button-semitransparentdark-hover: #f0f0f0;
  --color-background-button-semitransparentdark-active: #e0e0e0;
  --color-background-button-disabled-default: #4a4a4a;
  --color-background-button-selected-default: #e9e9e9;
  --color-background-combobox-item-hover: #404040;
  --color-background-datepicker-container: #212121;
  --color-background-datepicker-button-default: #212121;
  --color-background-datepicker-button-hover: rgba(250, 250, 250, 0.5);
  --color-background-datepicker-button-selected: #efefef;
  --color-background-formfield-primary: #030303;
  --color-background-formfield-disabled: #404040;
  --color-background-formfield-selected: #efefef;
  --color-background-overlay: #2b2b2b;
  --color-background-popover-primary: #2b2b2b;
  --color-background-popover-secondary: #efefef;
  --color-background-popover-education: #75bfff;
  --color-background-tag-primary-default: #767676;
  --color-background-tag-primary-hover: #535353;
  --color-background-tag-primary-active: #666;
  --color-background-tag-error-default: #f47171;
  --color-background-tag-error-hover: #cf001f;
  --color-background-tag-error-active: #b8001b;
  --color-background-tag-warning-default: #fdc900;
  --color-background-tag-warning-hover: #e18d00;
  --color-background-tag-warning-active: #d86800;
  --color-background-segmentedcontrol-container: #404040;
  --color-background-segmentedcontrol-tab-selected: #030303;
  --color-background-switch-default-unselected: #030303;
  --color-background-switch-default-selected: #efefef;
  --color-background-switch-disabled-unselected: #404040;
  --color-background-switch-disabled-selected: #ababab;
  --color-background-table-footer: #030303;
  --color-background-table-row-hover: #404040;
  --color-background-table-row-selected: #404040;
  --color-background-tagdata-primary: #767676;
  --color-background-tagdata-secondary: #111111;
  --color-background-tagdata-disabled: #404040;
  --color-background-tableofcontents-item-hover: #767676;
  --color-background-tiledata-10: #007A721A;
  --color-background-tiledata-11: #f765931A;
  --color-background-tiledata-12: #ffc58f1A;
  --color-background-tiledata-01: #005fcb1A;
  --color-background-tiledata-02: #75e4d51A;
  --color-background-tiledata-03: #B190FF1A;
  --color-background-tiledata-04: #FDA6001A;
  --color-background-tiledata-05: #75bfff1A;
  --color-background-tiledata-06: #de2c621A;
  --color-background-tiledata-07: #a4f9ac1A;
  --color-background-tiledata-08: #812ae71A;
  --color-background-tiledata-09: #ff5b451A;
  --color-background-tiledata-hover: #767676;
  --color-background-tiledata-disabled: #404040;
  --color-background-video-container-primary: #f9f9f9;
  --color-border-container: #767676;
  --color-border-default: #cdcdcd;
  --color-border-error: #f47171;
  --color-border-avatar: #030303;
  --color-border-formfield-error-default: #f47171;
  --color-border-formfield-error-hover: #cf001f;
  --color-border-formfield-disabled: #404040;
  --color-border-popover-primary: #212121;
  --color-border-popover-secondary: #efefef;
  --color-border-popover-education: #75bfff;
  --color-border-table-row-selected: #ffffff;
  --color-border-tag-disabled: #ababab;
  --elevation-floating: none;
  --elevation-raised-top: 0 0.5px 0 #f9f9f9;
  --elevation-raised-bottom: 0 -0.5px 0 #f9f9f9;
  --elevation-datepicker: 0 0 8px rgba(250, 250, 250, 0.6);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling for light mode when no color scheme specified 1`] = `
<style>
  :root {
  --g-colorSchemeName: lightMode;
  --color-data-visualization-10: #005062;
  --color-data-visualization-11: #de2c62;
  --color-data-visualization-12: #660e00;
  --color-data-visualization-primary: #0081fe;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error-graph: #ed0000;
  --color-data-visualization-error-text: #cc0000;
  --color-data-visualization-01: #003c96;
  --color-data-visualization-02: #11a69c;
  --color-data-visualization-03: #924af7;
  --color-data-visualization-04: #d17711;
  --color-data-visualization-05: #0081fe;
  --color-data-visualization-06: #ff5383;
  --color-data-visualization-07: #00ab55;
  --color-data-visualization-08: #400387;
  --color-data-visualization-09: #f2681f;
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-disabled: #a5a5a5;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-text-formfield-default: #111111;
  --color-text-formfield-disabled: #767676;
  --color-text-formfield-placeholder: #767676;
  --color-icon-default: #111111;
  --color-icon-subtle: #767676;
  --color-icon-success: #005f3e;
  --color-icon-disabled: #a5a5a5;
  --color-icon-error: #cc0000;
  --color-icon-warning: #bd5b00;
  --color-icon-info: #0074e8;
  --color-icon-recommendation: #812ae7;
  --color-icon-inverse: #ffffff;
  --color-icon-shopping: #0074e8;
  --color-icon-avatar-default: #111111;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-info-strong: #005fcb;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-neutral: #767676;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-background-avatar-placeholder: #efefef;
  --color-background-avatar-wash: rgba(0, 0, 0, 0.06);
  --color-background-badge-neutral: #767676;
  --color-background-badge-info-default: #0074e8;
  --color-background-badge-info-hover: #005fcb;
  --color-background-badge-error: #cc0000;
  --color-background-badge-warning: #bd5b00;
  --color-background-badge-success: #008753;
  --color-background-badge-recommendation: #812ae7;
  --color-background-box-default: #ffffff;
  --color-background-box-info-base: #0074e8;
  --color-background-box-info-weak: #d7edff;
  --color-background-box-error-base: #cc0000;
  --color-background-box-error-weak: #ffe0e0;
  --color-background-box-warning-base: #bd5b00;
  --color-background-box-warning-weak: #ffe4c1;
  --color-background-box-success-base: #008753;
  --color-background-box-success-weak: #c3f9c2;
  --color-background-box-recommendation-base: #812ae7;
  --color-background-box-recommendation-weak: #e9e4ff;
  --color-background-box-shopping: #0074e8;
  --color-background-box-secondary: #e9e9e9;
  --color-background-box-tertiary: #767676;
  --color-background-box-selected: #111111;
  --color-background-box-inverse: #111111;
  --color-background-box-education: #0074e8;
  --color-background-box-elevation-accent: #f1f1f1;
  --color-background-box-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-box-elevation-raised: rgba(0, 0, 0, 0);
  --color-background-box-lightwash: #e2e2e2;
  --color-background-box-darkwash: #dadada;
  --color-background-box-transparentdarkgray: rgba(51, 51, 51, 0.8);
  --color-background-button-primary-active: #a3081a;
  --color-background-button-secondary-default: #e9e9e9;
  --color-background-button-secondary-hover: #e2e2e2;
  --color-background-button-secondary-active: #dadada;
  --color-background-button-tertiary-hover: rgba(0, 0, 0, 0.06);
  --color-background-button-tertiary-active: rgba(0, 0, 0, 0.1);
  --color-background-button-shopping-default: #0074e8;
  --color-background-button-shopping-hover: #4a8ad4;
  --color-background-button-shopping-active: #4a85c9;
  --color-background-button-white-default: #ffffff;
  --color-background-button-white-hover: #f0f0f0;
  --color-background-button-white-active: #e0e0e0;
  --color-background-button-gray-default: #767676;
  --color-background-button-gray-hover: #878787;
  --color-background-button-gray-active: #828282;
  --color-background-button-semitransparentwhite-default: rgba(255, 255, 255, 0.8);
  --color-background-button-semitransparentwhite-hover: #f0f0f0;
  --color-background-button-semitransparentwhite-active: #e0e0e0;
  --color-background-button-semitransparentdark-default: rgba(51, 51, 51, 0.8);
  --color-background-button-semitransparentdark-hover: #121212;
  --color-background-button-semitransparentdark-active: #1f1f1f;
  --color-background-button-disabled-default: #e9e9e9;
  --color-background-button-selected-default: #111111;
  --color-background-combobox-item-hover: #efefef;
  --color-background-datepicker-container: #ffffff;
  --color-background-datepicker-button-default: #ffffff;
  --color-background-datepicker-button-hover: rgba(0, 0, 0, 0.06);
  --color-background-datepicker-button-selected: #111111;
  --color-background-formfield-primary: #ffffff;
  --color-background-formfield-disabled: #efefef;
  --color-background-formfield-selected: #111111;
  --color-background-overlay: #ffffff;
  --color-background-popover-primary: #ffffff;
  --color-background-popover-secondary: #111111;
  --color-background-popover-education: #0074e8;
  --color-background-tag-primary-default: #e9e9e9;
  --color-background-tag-primary-hover: #e2e2e2;
  --color-background-tag-primary-active: #dadada;
  --color-background-tag-error-default: #cc0000;
  --color-background-tag-error-hover: #ad081b;
  --color-background-tag-error-active: #a3081a;
  --color-background-tag-warning-default: #bd5b00;
  --color-background-tag-warning-hover: #aa4900;
  --color-background-tag-warning-active: #943a00;
  --color-background-segmentedcontrol-container: #efefef;
  --color-background-segmentedcontrol-tab-selected: #ffffff;
  --color-background-switch-default-unselected: #ffffff;
  --color-background-switch-default-selected: #111111;
  --color-background-switch-disabled-unselected: #efefef;
  --color-background-switch-disabled-selected: #767676;
  --color-background-table-footer: #ffffff;
  --color-background-table-row-hover: #efefef;
  --color-background-table-row-selected: #efefef;
  --color-background-tagdata-primary: #e9e9e9;
  --color-background-tagdata-secondary: #ffffff;
  --color-background-tagdata-disabled: #efefef;
  --color-background-tableofcontents-item-hover: #e9e9e9;
  --color-background-tiledata-10: #0050621A;
  --color-background-tiledata-11: #de2c621A;
  --color-background-tiledata-12: #660e001A;
  --color-background-tiledata-01: #003c961A;
  --color-background-tiledata-02: #11a69c1A;
  --color-background-tiledata-03: #924af71A;
  --color-background-tiledata-04: #d177111A;
  --color-background-tiledata-05: #0081fe1A;
  --color-background-tiledata-06: #ff53831A;
  --color-background-tiledata-07: #00ab551A;
  --color-background-tiledata-08: #4003871A;
  --color-background-tiledata-09: #f2681f1A;
  --color-background-tiledata-hover: #e9e9e9;
  --color-background-tiledata-disabled: #efefef;
  --color-background-video-container-primary: #111111;
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-border-avatar: #ffffff;
  --color-border-formfield-error-default: #cc0000;
  --color-border-formfield-error-hover: #ad081b;
  --color-border-formfield-disabled: #efefef;
  --color-border-popover-primary: #ffffff;
  --color-border-popover-secondary: #111111;
  --color-border-popover-education: #0074e8;
  --color-border-table-row-selected: #111111;
  --color-border-tag-disabled: #767676;
  --elevation-floating: 0 0 8px rgb(0 0 0 / 0.10);
  --elevation-raised-top: 0 2px 8px rgb(0 0 0 / 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgb(0 0 0 / 0.12);
  --elevation-datepicker: 0 0 8px rgba(0, 0, 0, 0.1);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling for light mode when specified 1`] = `
<style>
  :root {
  --g-colorSchemeName: lightMode;
  --color-data-visualization-10: #005062;
  --color-data-visualization-11: #de2c62;
  --color-data-visualization-12: #660e00;
  --color-data-visualization-primary: #0081fe;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error-graph: #ed0000;
  --color-data-visualization-error-text: #cc0000;
  --color-data-visualization-01: #003c96;
  --color-data-visualization-02: #11a69c;
  --color-data-visualization-03: #924af7;
  --color-data-visualization-04: #d17711;
  --color-data-visualization-05: #0081fe;
  --color-data-visualization-06: #ff5383;
  --color-data-visualization-07: #00ab55;
  --color-data-visualization-08: #400387;
  --color-data-visualization-09: #f2681f;
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-disabled: #a5a5a5;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-text-formfield-default: #111111;
  --color-text-formfield-disabled: #767676;
  --color-text-formfield-placeholder: #767676;
  --color-icon-default: #111111;
  --color-icon-subtle: #767676;
  --color-icon-success: #005f3e;
  --color-icon-disabled: #a5a5a5;
  --color-icon-error: #cc0000;
  --color-icon-warning: #bd5b00;
  --color-icon-info: #0074e8;
  --color-icon-recommendation: #812ae7;
  --color-icon-inverse: #ffffff;
  --color-icon-shopping: #0074e8;
  --color-icon-avatar-default: #111111;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-info-strong: #005fcb;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-neutral: #767676;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-background-avatar-placeholder: #efefef;
  --color-background-avatar-wash: rgba(0, 0, 0, 0.06);
  --color-background-badge-neutral: #767676;
  --color-background-badge-info-default: #0074e8;
  --color-background-badge-info-hover: #005fcb;
  --color-background-badge-error: #cc0000;
  --color-background-badge-warning: #bd5b00;
  --color-background-badge-success: #008753;
  --color-background-badge-recommendation: #812ae7;
  --color-background-box-default: #ffffff;
  --color-background-box-info-base: #0074e8;
  --color-background-box-info-weak: #d7edff;
  --color-background-box-error-base: #cc0000;
  --color-background-box-error-weak: #ffe0e0;
  --color-background-box-warning-base: #bd5b00;
  --color-background-box-warning-weak: #ffe4c1;
  --color-background-box-success-base: #008753;
  --color-background-box-success-weak: #c3f9c2;
  --color-background-box-recommendation-base: #812ae7;
  --color-background-box-recommendation-weak: #e9e4ff;
  --color-background-box-shopping: #0074e8;
  --color-background-box-secondary: #e9e9e9;
  --color-background-box-tertiary: #767676;
  --color-background-box-selected: #111111;
  --color-background-box-inverse: #111111;
  --color-background-box-education: #0074e8;
  --color-background-box-elevation-accent: #f1f1f1;
  --color-background-box-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-box-elevation-raised: rgba(0, 0, 0, 0);
  --color-background-box-lightwash: #e2e2e2;
  --color-background-box-darkwash: #dadada;
  --color-background-box-transparentdarkgray: rgba(51, 51, 51, 0.8);
  --color-background-button-primary-active: #a3081a;
  --color-background-button-secondary-default: #e9e9e9;
  --color-background-button-secondary-hover: #e2e2e2;
  --color-background-button-secondary-active: #dadada;
  --color-background-button-tertiary-hover: rgba(0, 0, 0, 0.06);
  --color-background-button-tertiary-active: rgba(0, 0, 0, 0.1);
  --color-background-button-shopping-default: #0074e8;
  --color-background-button-shopping-hover: #4a8ad4;
  --color-background-button-shopping-active: #4a85c9;
  --color-background-button-white-default: #ffffff;
  --color-background-button-white-hover: #f0f0f0;
  --color-background-button-white-active: #e0e0e0;
  --color-background-button-gray-default: #767676;
  --color-background-button-gray-hover: #878787;
  --color-background-button-gray-active: #828282;
  --color-background-button-semitransparentwhite-default: rgba(255, 255, 255, 0.8);
  --color-background-button-semitransparentwhite-hover: #f0f0f0;
  --color-background-button-semitransparentwhite-active: #e0e0e0;
  --color-background-button-semitransparentdark-default: rgba(51, 51, 51, 0.8);
  --color-background-button-semitransparentdark-hover: #121212;
  --color-background-button-semitransparentdark-active: #1f1f1f;
  --color-background-button-disabled-default: #e9e9e9;
  --color-background-button-selected-default: #111111;
  --color-background-combobox-item-hover: #efefef;
  --color-background-datepicker-container: #ffffff;
  --color-background-datepicker-button-default: #ffffff;
  --color-background-datepicker-button-hover: rgba(0, 0, 0, 0.06);
  --color-background-datepicker-button-selected: #111111;
  --color-background-formfield-primary: #ffffff;
  --color-background-formfield-disabled: #efefef;
  --color-background-formfield-selected: #111111;
  --color-background-overlay: #ffffff;
  --color-background-popover-primary: #ffffff;
  --color-background-popover-secondary: #111111;
  --color-background-popover-education: #0074e8;
  --color-background-tag-primary-default: #e9e9e9;
  --color-background-tag-primary-hover: #e2e2e2;
  --color-background-tag-primary-active: #dadada;
  --color-background-tag-error-default: #cc0000;
  --color-background-tag-error-hover: #ad081b;
  --color-background-tag-error-active: #a3081a;
  --color-background-tag-warning-default: #bd5b00;
  --color-background-tag-warning-hover: #aa4900;
  --color-background-tag-warning-active: #943a00;
  --color-background-segmentedcontrol-container: #efefef;
  --color-background-segmentedcontrol-tab-selected: #ffffff;
  --color-background-switch-default-unselected: #ffffff;
  --color-background-switch-default-selected: #111111;
  --color-background-switch-disabled-unselected: #efefef;
  --color-background-switch-disabled-selected: #767676;
  --color-background-table-footer: #ffffff;
  --color-background-table-row-hover: #efefef;
  --color-background-table-row-selected: #efefef;
  --color-background-tagdata-primary: #e9e9e9;
  --color-background-tagdata-secondary: #ffffff;
  --color-background-tagdata-disabled: #efefef;
  --color-background-tableofcontents-item-hover: #e9e9e9;
  --color-background-tiledata-10: #0050621A;
  --color-background-tiledata-11: #de2c621A;
  --color-background-tiledata-12: #660e001A;
  --color-background-tiledata-01: #003c961A;
  --color-background-tiledata-02: #11a69c1A;
  --color-background-tiledata-03: #924af71A;
  --color-background-tiledata-04: #d177111A;
  --color-background-tiledata-05: #0081fe1A;
  --color-background-tiledata-06: #ff53831A;
  --color-background-tiledata-07: #00ab551A;
  --color-background-tiledata-08: #4003871A;
  --color-background-tiledata-09: #f2681f1A;
  --color-background-tiledata-hover: #e9e9e9;
  --color-background-tiledata-disabled: #efefef;
  --color-background-video-container-primary: #111111;
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-border-avatar: #ffffff;
  --color-border-formfield-error-default: #cc0000;
  --color-border-formfield-error-hover: #ad081b;
  --color-border-formfield-disabled: #efefef;
  --color-border-popover-primary: #ffffff;
  --color-border-popover-secondary: #111111;
  --color-border-popover-education: #0074e8;
  --color-border-table-row-selected: #111111;
  --color-border-tag-disabled: #767676;
  --elevation-floating: 0 0 8px rgb(0 0 0 / 0.10);
  --elevation-raised-top: 0 2px 8px rgb(0 0 0 / 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgb(0 0 0 / 0.12);
  --elevation-datepicker: 0 0 8px rgba(0, 0, 0, 0.1);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling with a custom class if has an id 1`] = `
<style>
  .__gestaltThemetestId {
  --g-colorSchemeName: lightMode;
  --color-data-visualization-10: #005062;
  --color-data-visualization-11: #de2c62;
  --color-data-visualization-12: #660e00;
  --color-data-visualization-primary: #0081fe;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error-graph: #ed0000;
  --color-data-visualization-error-text: #cc0000;
  --color-data-visualization-01: #003c96;
  --color-data-visualization-02: #11a69c;
  --color-data-visualization-03: #924af7;
  --color-data-visualization-04: #d17711;
  --color-data-visualization-05: #0081fe;
  --color-data-visualization-06: #ff5383;
  --color-data-visualization-07: #00ab55;
  --color-data-visualization-08: #400387;
  --color-data-visualization-09: #f2681f;
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-disabled: #a5a5a5;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-text-formfield-default: #111111;
  --color-text-formfield-disabled: #767676;
  --color-text-formfield-placeholder: #767676;
  --color-icon-default: #111111;
  --color-icon-subtle: #767676;
  --color-icon-success: #005f3e;
  --color-icon-disabled: #a5a5a5;
  --color-icon-error: #cc0000;
  --color-icon-warning: #bd5b00;
  --color-icon-info: #0074e8;
  --color-icon-recommendation: #812ae7;
  --color-icon-inverse: #ffffff;
  --color-icon-shopping: #0074e8;
  --color-icon-avatar-default: #111111;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-info-strong: #005fcb;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-neutral: #767676;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-background-avatar-placeholder: #efefef;
  --color-background-avatar-wash: rgba(0, 0, 0, 0.06);
  --color-background-badge-neutral: #767676;
  --color-background-badge-info-default: #0074e8;
  --color-background-badge-info-hover: #005fcb;
  --color-background-badge-error: #cc0000;
  --color-background-badge-warning: #bd5b00;
  --color-background-badge-success: #008753;
  --color-background-badge-recommendation: #812ae7;
  --color-background-box-default: #ffffff;
  --color-background-box-info-base: #0074e8;
  --color-background-box-info-weak: #d7edff;
  --color-background-box-error-base: #cc0000;
  --color-background-box-error-weak: #ffe0e0;
  --color-background-box-warning-base: #bd5b00;
  --color-background-box-warning-weak: #ffe4c1;
  --color-background-box-success-base: #008753;
  --color-background-box-success-weak: #c3f9c2;
  --color-background-box-recommendation-base: #812ae7;
  --color-background-box-recommendation-weak: #e9e4ff;
  --color-background-box-shopping: #0074e8;
  --color-background-box-secondary: #e9e9e9;
  --color-background-box-tertiary: #767676;
  --color-background-box-selected: #111111;
  --color-background-box-inverse: #111111;
  --color-background-box-education: #0074e8;
  --color-background-box-elevation-accent: #f1f1f1;
  --color-background-box-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-box-elevation-raised: rgba(0, 0, 0, 0);
  --color-background-box-lightwash: #e2e2e2;
  --color-background-box-darkwash: #dadada;
  --color-background-box-transparentdarkgray: rgba(51, 51, 51, 0.8);
  --color-background-button-primary-active: #a3081a;
  --color-background-button-secondary-default: #e9e9e9;
  --color-background-button-secondary-hover: #e2e2e2;
  --color-background-button-secondary-active: #dadada;
  --color-background-button-tertiary-hover: rgba(0, 0, 0, 0.06);
  --color-background-button-tertiary-active: rgba(0, 0, 0, 0.1);
  --color-background-button-shopping-default: #0074e8;
  --color-background-button-shopping-hover: #4a8ad4;
  --color-background-button-shopping-active: #4a85c9;
  --color-background-button-white-default: #ffffff;
  --color-background-button-white-hover: #f0f0f0;
  --color-background-button-white-active: #e0e0e0;
  --color-background-button-gray-default: #767676;
  --color-background-button-gray-hover: #878787;
  --color-background-button-gray-active: #828282;
  --color-background-button-semitransparentwhite-default: rgba(255, 255, 255, 0.8);
  --color-background-button-semitransparentwhite-hover: #f0f0f0;
  --color-background-button-semitransparentwhite-active: #e0e0e0;
  --color-background-button-semitransparentdark-default: rgba(51, 51, 51, 0.8);
  --color-background-button-semitransparentdark-hover: #121212;
  --color-background-button-semitransparentdark-active: #1f1f1f;
  --color-background-button-disabled-default: #e9e9e9;
  --color-background-button-selected-default: #111111;
  --color-background-combobox-item-hover: #efefef;
  --color-background-datepicker-container: #ffffff;
  --color-background-datepicker-button-default: #ffffff;
  --color-background-datepicker-button-hover: rgba(0, 0, 0, 0.06);
  --color-background-datepicker-button-selected: #111111;
  --color-background-formfield-primary: #ffffff;
  --color-background-formfield-disabled: #efefef;
  --color-background-formfield-selected: #111111;
  --color-background-overlay: #ffffff;
  --color-background-popover-primary: #ffffff;
  --color-background-popover-secondary: #111111;
  --color-background-popover-education: #0074e8;
  --color-background-tag-primary-default: #e9e9e9;
  --color-background-tag-primary-hover: #e2e2e2;
  --color-background-tag-primary-active: #dadada;
  --color-background-tag-error-default: #cc0000;
  --color-background-tag-error-hover: #ad081b;
  --color-background-tag-error-active: #a3081a;
  --color-background-tag-warning-default: #bd5b00;
  --color-background-tag-warning-hover: #aa4900;
  --color-background-tag-warning-active: #943a00;
  --color-background-segmentedcontrol-container: #efefef;
  --color-background-segmentedcontrol-tab-selected: #ffffff;
  --color-background-switch-default-unselected: #ffffff;
  --color-background-switch-default-selected: #111111;
  --color-background-switch-disabled-unselected: #efefef;
  --color-background-switch-disabled-selected: #767676;
  --color-background-table-footer: #ffffff;
  --color-background-table-row-hover: #efefef;
  --color-background-table-row-selected: #efefef;
  --color-background-tagdata-primary: #e9e9e9;
  --color-background-tagdata-secondary: #ffffff;
  --color-background-tagdata-disabled: #efefef;
  --color-background-tableofcontents-item-hover: #e9e9e9;
  --color-background-tiledata-10: #0050621A;
  --color-background-tiledata-11: #de2c621A;
  --color-background-tiledata-12: #660e001A;
  --color-background-tiledata-01: #003c961A;
  --color-background-tiledata-02: #11a69c1A;
  --color-background-tiledata-03: #924af71A;
  --color-background-tiledata-04: #d177111A;
  --color-background-tiledata-05: #0081fe1A;
  --color-background-tiledata-06: #ff53831A;
  --color-background-tiledata-07: #00ab551A;
  --color-background-tiledata-08: #4003871A;
  --color-background-tiledata-09: #f2681f1A;
  --color-background-tiledata-hover: #e9e9e9;
  --color-background-tiledata-disabled: #efefef;
  --color-background-video-container-primary: #111111;
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-border-avatar: #ffffff;
  --color-border-formfield-error-default: #cc0000;
  --color-border-formfield-error-hover: #ad081b;
  --color-border-formfield-disabled: #efefef;
  --color-border-popover-primary: #ffffff;
  --color-border-popover-secondary: #111111;
  --color-border-popover-education: #0074e8;
  --color-border-table-row-selected: #111111;
  --color-border-tag-disabled: #767676;
  --elevation-floating: 0 0 8px rgb(0 0 0 / 0.10);
  --elevation-raised-top: 0 2px 8px rgb(0 0 0 / 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgb(0 0 0 / 0.12);
  --elevation-datepicker: 0 0 8px rgba(0, 0, 0, 0.1);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling with media query when userPreference 1`] = `
<style>
  @media(prefers-color-scheme: dark) {
  :root {
  --g-colorSchemeName: darkMode;
  --color-data-visualization-10: #007A72;
  --color-data-visualization-11: #f76593;
  --color-data-visualization-12: #ffc58f;
  --color-data-visualization-primary: #75bfff;
  --color-data-visualization-success-graph: #6bec8c;
  --color-data-visualization-success-text: #39d377;
  --color-data-visualization-error-graph: #f47171;
  --color-data-visualization-error-text: #eb4242;
  --color-data-visualization-01: #005fcb;
  --color-data-visualization-02: #75e4d5;
  --color-data-visualization-03: #B190FF;
  --color-data-visualization-04: #FDA600;
  --color-data-visualization-05: #75bfff;
  --color-data-visualization-06: #de2c62;
  --color-data-visualization-07: #a4f9ac;
  --color-data-visualization-08: #812ae7;
  --color-data-visualization-09: #ff5b45;
  --color-text-default: #ffffff;
  --color-text-subtle: #a5a5a5;
  --color-text-success: #39d377;
  --color-text-disabled: #4a4a4a;
  --color-text-error: #f47171;
  --color-text-warning: #e18d00;
  --color-text-inverse: #111111;
  --color-text-shopping: #75bfff;
  --color-text-link: #45a3fe;
  --color-text-formfield-default: #efefef;
  --color-text-formfield-disabled: #ababab;
  --color-text-formfield-placeholder: #ababab;
  --color-icon-default: #ffffff;
  --color-icon-subtle: #a5a5a5;
  --color-icon-success: #39d377;
  --color-icon-disabled: #4a4a4a;
  --color-icon-error: #f47171;
  --color-icon-warning: #e18d00;
  --color-icon-info: #75bfff;
  --color-icon-recommendation: #b190ff;
  --color-icon-inverse: #111111;
  --color-icon-shopping: #75bfff;
  --color-icon-avatar-default: #efefef;
  --color-background-default: #111111;
  --color-background-info-base: #75bfff;
  --color-background-info-weak: #003c96;
  --color-background-info-strong: #abdbff;
  --color-background-error-base: #f47171;
  --color-background-error-weak: #660000;
  --color-background-warning-base: #fdc900;
  --color-background-warning-weak: #7c2d00;
  --color-background-success-base: #6bec8c;
  --color-background-success-weak: #00422c;
  --color-background-recommendation-base: #b190ff;
  --color-background-recommendation-weak: #550aa9;
  --color-background-neutral: #cdcdcd;
  --color-background-shopping: #75bfff;
  --color-background-secondary-base: #767676;
  --color-background-tertiary-base: #cdcdcd;
  --color-background-selected-base: #e9e9e9;
  --color-background-inverse-base: #f9f9f9;
  --color-background-education: #75bfff;
  --color-background-elevation-accent: #191919;
  --color-background-elevation-floating: #2b2b2b;
  --color-background-elevation-raised: #4a4a4a;
  --color-background-avatar-placeholder: #404040;
  --color-background-avatar-wash: rgba(250, 250, 250, 0.5);
  --color-background-badge-neutral: #cdcdcd;
  --color-background-badge-info-default: #75bfff;
  --color-background-badge-info-hover: #abdbff;
  --color-background-badge-error: #f47171;
  --color-background-badge-warning: #fdc900;
  --color-background-badge-success: #6bec8c;
  --color-background-badge-recommendation: #b190ff;
  --color-background-box-default: #111111;
  --color-background-box-info-base: #75bfff;
  --color-background-box-info-weak: #003c96;
  --color-background-box-error-base: #f47171;
  --color-background-box-error-weak: #660000;
  --color-background-box-warning-base: #fdc900;
  --color-background-box-warning-weak: #7c2d00;
  --color-background-box-success-base: #6bec8c;
  --color-background-box-success-weak: #00422c;
  --color-background-box-recommendation-base: #b190ff;
  --color-background-box-recommendation-weak: #550aa9;
  --color-background-box-shopping: #75bfff;
  --color-background-box-secondary: #767676;
  --color-background-box-tertiary: #cdcdcd;
  --color-background-box-selected: #e9e9e9;
  --color-background-box-inverse: #f9f9f9;
  --color-background-box-education: #75bfff;
  --color-background-box-elevation-accent: #191919;
  --color-background-box-elevation-floating: #2b2b2b;
  --color-background-box-elevation-raised: #4a4a4a;
  --color-background-box-lightwash: #535353;
  --color-background-box-darkwash: #666;
  --color-background-box-transparentdarkgray: rgba(255, 255, 255, 0.8);
  --color-background-button-primary-active: #b8001b;
  --color-background-button-secondary-default: #4a4a4a;
  --color-background-button-secondary-hover: #535353;
  --color-background-button-secondary-active: #666;
  --color-background-button-tertiary-hover: rgba(250, 250, 250, 0.5);
  --color-background-button-tertiary-active: rgba(250, 250, 250, 0.6);
  --color-background-button-shopping-default: #75bfff;
  --color-background-button-shopping-hover: #4a8ad4;
  --color-background-button-shopping-active: #4a85c9;
  --color-background-button-white-default: #030303;
  --color-background-button-white-hover: #121212;
  --color-background-button-white-active: #1f1f1f;
  --color-background-button-gray-default: #cdcdcd;
  --color-background-button-gray-hover: #919191;
  --color-background-button-gray-active: #9b9b9b;
  --color-background-button-semitransparentwhite-default: rgba(51, 51, 51, 0.8);
  --color-background-button-semitransparentwhite-hover: #121212;
  --color-background-button-semitransparentwhite-active: #1f1f1f;
  --color-background-button-semitransparentdark-default: rgba(255, 255, 255, 0.8);
  --color-background-button-semitransparentdark-hover: #f0f0f0;
  --color-background-button-semitransparentdark-active: #e0e0e0;
  --color-background-button-disabled-default: #4a4a4a;
  --color-background-button-selected-default: #e9e9e9;
  --color-background-combobox-item-hover: #404040;
  --color-background-datepicker-container: #212121;
  --color-background-datepicker-button-default: #212121;
  --color-background-datepicker-button-hover: rgba(250, 250, 250, 0.5);
  --color-background-datepicker-button-selected: #efefef;
  --color-background-formfield-primary: #030303;
  --color-background-formfield-disabled: #404040;
  --color-background-formfield-selected: #efefef;
  --color-background-overlay: #2b2b2b;
  --color-background-popover-primary: #2b2b2b;
  --color-background-popover-secondary: #efefef;
  --color-background-popover-education: #75bfff;
  --color-background-tag-primary-default: #767676;
  --color-background-tag-primary-hover: #535353;
  --color-background-tag-primary-active: #666;
  --color-background-tag-error-default: #f47171;
  --color-background-tag-error-hover: #cf001f;
  --color-background-tag-error-active: #b8001b;
  --color-background-tag-warning-default: #fdc900;
  --color-background-tag-warning-hover: #e18d00;
  --color-background-tag-warning-active: #d86800;
  --color-background-segmentedcontrol-container: #404040;
  --color-background-segmentedcontrol-tab-selected: #030303;
  --color-background-switch-default-unselected: #030303;
  --color-background-switch-default-selected: #efefef;
  --color-background-switch-disabled-unselected: #404040;
  --color-background-switch-disabled-selected: #ababab;
  --color-background-table-footer: #030303;
  --color-background-table-row-hover: #404040;
  --color-background-table-row-selected: #404040;
  --color-background-tagdata-primary: #767676;
  --color-background-tagdata-secondary: #111111;
  --color-background-tagdata-disabled: #404040;
  --color-background-tableofcontents-item-hover: #767676;
  --color-background-tiledata-10: #007A721A;
  --color-background-tiledata-11: #f765931A;
  --color-background-tiledata-12: #ffc58f1A;
  --color-background-tiledata-01: #005fcb1A;
  --color-background-tiledata-02: #75e4d51A;
  --color-background-tiledata-03: #B190FF1A;
  --color-background-tiledata-04: #FDA6001A;
  --color-background-tiledata-05: #75bfff1A;
  --color-background-tiledata-06: #de2c621A;
  --color-background-tiledata-07: #a4f9ac1A;
  --color-background-tiledata-08: #812ae71A;
  --color-background-tiledata-09: #ff5b451A;
  --color-background-tiledata-hover: #767676;
  --color-background-tiledata-disabled: #404040;
  --color-background-video-container-primary: #f9f9f9;
  --color-border-container: #767676;
  --color-border-default: #cdcdcd;
  --color-border-error: #f47171;
  --color-border-avatar: #030303;
  --color-border-formfield-error-default: #f47171;
  --color-border-formfield-error-hover: #cf001f;
  --color-border-formfield-disabled: #404040;
  --color-border-popover-primary: #212121;
  --color-border-popover-secondary: #efefef;
  --color-border-popover-education: #75bfff;
  --color-border-table-row-selected: #ffffff;
  --color-border-tag-disabled: #ababab;
  --elevation-floating: none;
  --elevation-raised-top: 0 0.5px 0 #f9f9f9;
  --elevation-raised-bottom: 0 -0.5px 0 #f9f9f9;
  --elevation-datepicker: 0 0 8px rgba(250, 250, 250, 0.6);
 }
}
</style>
`;
